assignment 1/doc/final_grammar.txt
/* GRAMMAR
expr -> sub_expr expr'
expr' -> EQ sub_expr | LT sub_expr | GT sub_expr
sub_expr -> term pm_expr
pm_expr -> MINUS term pm_expr | PLUS term pm_expr | EPS
term -> factor mul_term
mul_term -> MUL term | div_term 
div_term -> DIV term | EPS
factor -> NUM | ID | LP expr RP 
*/
//Note: In case of expressions of the form 5>(6==7), paranthesis are required to create a valid expression
